--- a/IDS-frontend/src/app/pages/upload-page/upload-page.component.html
+++ b/IDS-frontend/src/app/pages/upload-page/upload-page.component.html
@@ -1,1 +1,23 @@
-<p>upload-page works!</p>
+<div class="container">
+    <p-fileUpload
+        name="file"
+        [customUpload]="true"
+        accept=".csv,.json"
+        maxFileSize="5000000"
+        (uploadHandler)="onUpload($event)" />
+
+    <div class="errors" *ngIf="errors.length > 0">
+        <h3>Errors:</h3>
+        <p *ngFor="let error of errors"> {{ error }}</p>
+    </div>
+
+    <div class="success" *ngIf="success">
+        <h3>Upload was successful</h3>
+    </div>
+</div>
+
+<div *ngIf="loading" class="loading-overlay">
+    <p-progressSpinner
+        styleClass="overlay-spinner">
+    </p-progressSpinner>
+</div>
